tests/src/frontend/typechecking/invalid/early_return_async.sk
fun main(): void {
  _: ^Int = async {
    if (false) {
      return "Fail\n"
    };
    37
  };
  print_string("Pass")
}
